--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jotai-devtools": "^0.13.0",
     "lucide-react": "^0.476.0",
     "motion": "^12.23.24",
+    "ofetch": "^1.4.1",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
