--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,7 +36,5 @@
   "files.associations": {
     "*.css": "tailwindcss"
   },
-  "cSpell.words": [
-    "Jxxzh"
-  ]
+  "cSpell.words": ["Jxxzh"]
 }
