feat: 将cursor rules改写为更简洁的AGENTS.md，方便在不同的AI编程工具中使用

--- a/components.json
+++ b/components.json
@@ -19,7 +19,6 @@
     "hooks": "@/shared/hooks"
   },
   "registries": {
-    "@coss": "https://coss.com/ui/r/{name}.json",
-    "@basecn": "https://basecn.dev/r/{name}.json"
+    "@coss": "https://coss.com/ui/r/{name}.json"
   }
 }
