--- a/package.json
+++ b/package.json
@@ -44,16 +44,11 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/react": "^16.3.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^4.7.0",
-    "jsdom": "^26.1.0",
     "shadcn": "^3.5.1",
     "typescript": "^5.9.3",
-    "vite": "^7.2.2",
-    "vitest": "^3.2.4",
-    "web-vitals": "^4.2.4"
+    "vite": "^7.2.2"
   }
 }
