--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jotai": "^2.15.1",
     "lucide-react": "^0.476.0",
     "motion": "^12.23.24",
+    "nitro": "3.0.1-alpha.1",
     "ofetch": "^1.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
