--- a/package.json
+++ b/package.json
@@ -13,44 +13,44 @@
     "check": "biome check --write"
   },
   "dependencies": {
-    "@base-ui-components/react": "1.0.0-beta.4",
+    "@base-ui-components/react": "^1.0.0-rc.0",
     "@t3-oss/env-core": "^0.12.0",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/db": "^0.1.12",
     "@tanstack/devtools-vite": "^0.3.11",
     "@tanstack/query-db-collection": "^0.2.42",
-    "@tanstack/react-db": "^0.1.43",
+    "@tanstack/react-db": "^0.1.55",
     "@tanstack/react-devtools": "^0.2.2",
-    "@tanstack/react-query": "^5.90.7",
-    "@tanstack/react-query-devtools": "^5.90.2",
-    "@tanstack/react-router": "^1.134.18",
-    "@tanstack/react-router-devtools": "^1.134.18",
-    "@tanstack/react-router-ssr-query": "^1.134.18",
-    "@tanstack/react-start": "^1.134.18",
-    "@tanstack/router-plugin": "^1.134.18",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-query-devtools": "^5.91.1",
+    "@tanstack/react-router": "^1.139.14",
+    "@tanstack/react-router-devtools": "^1.139.14",
+    "@tanstack/react-router-ssr-query": "^1.139.14",
+    "@tanstack/react-start": "^1.139.14",
+    "@tanstack/router-plugin": "^1.139.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "consola": "^3.4.2",
-    "jotai": "^2.15.1",
+    "jotai": "^2.15.2",
     "lucide-react": "^0.476.0",
-    "motion": "^12.23.24",
+    "motion": "^12.23.25",
     "nitro": "3.0.1-alpha.1",
     "ofetch": "^1.5.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.1.12"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.7.0",
     "shadcn": "^3.5.1",
     "typescript": "^5.9.3",
-    "vite": "^7.2.2"
+    "vite": "^7.2.6"
   }
 }
