--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "check": "biome check --write"
   },
   "dependencies": {
-    "@base-ui-components/react": "^1.0.0-rc.0",
+    "@base-ui/react": "^1.0.0",
     "@t3-oss/env-core": "^0.12.0",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/db": "^0.1.12",
