--- a/components.json
+++ b/components.json
@@ -1,24 +1,24 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "new-york",
-  "rsc": true,
+  "style": "base-nova",
+  "rsc": false,
   "tsx": true,
   "tailwind": {
     "config": "",
     "css": "src/app/styles/theme.css",
-    "baseColor": "zinc",
+    "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
   },
-  "iconLibrary": "lucide",
+  "iconLibrary": "tabler",
+  "menuColor": "default",
+  "menuAccent": "subtle",
+  "registries": {},                              
   "aliases": {
     "components": "@/shared/components",
     "utils": "@/shared/lib/utils",
     "ui": "@/shared/components/ui",
     "lib": "@/shared/lib",
     "hooks": "@/shared/hooks"
-  },
-  "registries": {
-    "@coss": "https://coss.com/ui/r/{name}.json"
   }
 }
