--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@fontsource-variable/inter": "^5.2.8",
     "@t3-oss/env-core": "^0.12.0",
+    "@tabler/icons-react": "^3.36.0",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/db": "^0.1.12",
     "@tanstack/devtools-vite": "^0.3.11",
@@ -32,12 +34,14 @@
     "clsx": "^2.1.1",
     "consola": "^3.4.2",
     "jotai": "^2.15.2",
-    "lucide-react": "^0.476.0",
     "motion": "^12.23.25",
+    "next-themes": "^0.4.6",
     "nitro": "3.0.1-alpha.1",
     "ofetch": "^1.5.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "shadcn": "^3.6.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
@@ -49,7 +53,6 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.7.0",
-    "shadcn": "^3.5.1",
     "typescript": "^5.9.3",
     "vite": "^7.2.6"
   }
