--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
+      "*": ["./*"],
+      "@/*": ["./src/*"]
     }
   }
 }
