--- a/package.json
+++ b/package.json
@@ -15,44 +15,43 @@
   "dependencies": {
     "@base-ui/react": "^1.0.0",
     "@fontsource-variable/inter": "^5.2.8",
-    "@t3-oss/env-core": "^0.12.0",
-    "@tabler/icons-react": "^3.36.0",
-    "@tailwindcss/vite": "^4.1.17",
-    "@tanstack/db": "^0.1.12",
-    "@tanstack/devtools-vite": "^0.3.11",
-    "@tanstack/query-db-collection": "^0.2.42",
-    "@tanstack/react-db": "^0.1.55",
-    "@tanstack/react-devtools": "^0.2.2",
-    "@tanstack/react-query": "^5.90.12",
-    "@tanstack/react-query-devtools": "^5.91.1",
-    "@tanstack/react-router": "^1.139.14",
-    "@tanstack/react-router-devtools": "^1.139.14",
-    "@tanstack/react-router-ssr-query": "^1.139.14",
-    "@tanstack/react-start": "^1.139.14",
-    "@tanstack/router-plugin": "^1.139.14",
+    "@t3-oss/env-core": "^0.13.10",
+    "@tabler/icons-react": "^3.36.1",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/devtools-vite": "^0.4.1",
+    "@tanstack/query-db-collection": "^1.0.13",
+    "@tanstack/react-db": "^0.1.61",
+    "@tanstack/react-devtools": "^0.9.1",
+    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-devtools": "^5.91.2",
+    "@tanstack/react-router": "^1.145.11",
+    "@tanstack/react-router-devtools": "^1.145.11",
+    "@tanstack/react-router-ssr-query": "^1.145.11",
+    "@tanstack/react-start": "^1.145.11",
+    "@tanstack/router-plugin": "^1.145.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "consola": "^3.4.2",
-    "jotai": "^2.15.2",
-    "motion": "^12.23.25",
-    "nitro": "3.0.1-alpha.1",
+    "jotai": "^2.16.1",
+    "motion": "^12.24.10",
+    "nitro": "latest",
     "ofetch": "^1.5.1",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "shadcn": "^3.6.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "shadcn": "^3.6.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
-    "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.1.13"
+    "vite-tsconfig-paths": "^6.0.3",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.10",
+    "@biomejs/biome": "^2.3.11",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@vitejs/plugin-react": "^5.1.2",
     "typescript": "^5.9.3",
-    "vite": "^7.2.6"
+    "vite": "^7.3.1"
   }
 }
